# career-path-advisor

./: .gitignore  CAREER-PATH-ADVISOR-ROADMAP.md  LANGGRAPH_DOCS.md  README.md
backend/: .env.example  .gitignore  README.md  llm_benchmark.py  main.py  pyproject.toml  requirements.txt  schema_3nf.sql  scrape_all.py  seed_courses.py  seed_engineering.py  seed_internships.py  seed_linkedin_data.py  test_role.py
backend/graph/: __init__.py  consts.py  graph.py  state.py
backend/graph/chains/: __init__.py  cv_parser.py  gap_analyzer.py  matcher.py  opportunity_researcher.py  reviewer.py  roadmap_gen.py  skill_extractor.py
backend/graph/nodes/: __init__.py  analyze.py  extract.py  generate.py  match.py  parse.py  research.py  review.py
backend/graph/utils/: __init__.py  cache_service.py  chromadb_client.py  course_scraper.py  document_loader.py  embedding_service.py  indeed_scraper.py  job_scraper.py  llm_validator.py  skill_database.py  skill_matcher.py  supabase_client.py
backend/scraping/: __init__.py  base_scraper.py  run_all.py
backend/scraping/fields/: __init__.py  computer_engineering.py  electrical_engineering.py  mechanical_engineering.py
backend/tests/: test_core.py
data/: industry_requirements.json  skills_taxonomy.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: FileUploader.tsx  RecommendationCard.tsx  SkillsChart.tsx
